src/objects/HI001_VisitReport__c.object
<CustomObject>
    <description>Objeto para crear RV para BHI y CF</description>
    <fields>
        <fullName>BBVA_ls_Rating__c</fullName>
        <description>calificacion del reporte de visita</description>
        <label>Calificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Malo</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Bueno</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Muy Bueno</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPyP001_ls_ObjetivoVisita__c</fullName>
        <description>Campo creado para los objetivos específicos de la Banca Patrimonial y Privada</description>
        <label>Objetivo de la Visita / Llamada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contratación de producto o servicio</fullName>
                </value>
                <value>
                    <fullName>Estructuración de operación de crédito</fullName>
                </value>
                <value>
                    <fullName>Oferta de Producto o servicio de BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Ofrecer soluciones integrales</fullName>
                </value>
                <value>
                    <fullName>Servicios No Financieros</fullName>
                </value>
                <value>
                    <fullName>Prospección de Clientes Nuevos</fullName>
                </value>
                <value>
                    <fullName>Atención a Proyectos y Plan de Cuenta (Sinergia)</fullName>
                </value>
                <value>
                    <fullName>Presentar a BBVA Bancomer como socio estratégico</fullName>
                </value>
                <value>
                    <fullName>Actualización de información</fullName>
                </value>
                <value>
                    <fullName>Resolver inquietudes sobre incidencias o aclaraciones</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Asesoría en productos o servicios BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Contactabilidad Cliente.</fullName>
                </value>
                <value>
                    <fullName>Hora &apos;D&apos;</fullName>
                </value>
                <value>
                    <fullName>Invitación a Eventos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ca_CorreoEnviado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correo Enviado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF001_fh_FechaEnvioMinuta__c</fullName>
        <description>Fecha de envío de la minuta.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Envio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF001_fm_Division__c</fullName>
        <description>Fórmula que obtiene la división del propietario del reporte de visita.</description>
        <formula>TEXT(Owner:User.Divisi_n__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF001_ft_Fecha_Visita_Programada__c</fullName>
        <description>Fecha y hora de programación de la agenda de arranque</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Fecha en la que se programo la visita o se programará.</inlineHelpText>
        <label>Fecha Visita Programada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF001_ft_ProximaVisita__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Próxima Visita</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF001_lm_Asesorar__c</fullName>
        <label>Asesorar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construir credibilidad</fullName>
                </value>
                <value>
                    <fullName>Maximizar los resultados del cliente</fullName>
                </value>
                <value>
                    <fullName>Acompañar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_lm_Entender__c</fullName>
        <label>Entender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entender al cliente</fullName>
                </value>
                <value>
                    <fullName>Entender mi negocio</fullName>
                </value>
                <value>
                    <fullName>Entender la industria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_lm_InvolucrarColaborar__c</fullName>
        <label>Involucrar y Colaborar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enfoque al cliente</fullName>
                </value>
                <value>
                    <fullName>Ser parte del cliente</fullName>
                </value>
                <value>
                    <fullName>Un solo Bancomer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_lm_Planea__c</fullName>
        <label>Planea</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planea un camino</fullName>
                </value>
                <value>
                    <fullName>Planea una agenda útil</fullName>
                </value>
                <value>
                    <fullName>Planea una interacción de valor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ls_CalificacionReporte__c</fullName>
        <label>Calificación de Reporte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Bueno</fullName>
                    <isActive>false</isActive>
                    <label>Bueno</label>
                </value>
                <value>
                    <fullName>Excelente</fullName>
                    <isActive>false</isActive>
                    <label>Excelente</label>
                </value>
                <value>
                    <fullName>Malo</fullName>
                    <isActive>false</isActive>
                    <label>Malo</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                    <isActive>false</isActive>
                    <label>Regular</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ls_Capacitacion__c</fullName>
        <label>Capacitación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arrendamiento Puro</fullName>
                </value>
                <value>
                    <fullName>Persona Moral</fullName>
                </value>
                <value>
                    <fullName>Gravity</fullName>
                </value>
                <value>
                    <fullName>Compra Inteligente</fullName>
                </value>
                <value>
                    <fullName>Seguros Bancomer</fullName>
                </value>
                <value>
                    <fullName>Reunión con Vendedores</fullName>
                </value>
                <value>
                    <fullName>Oferta Comercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ls_ObjetivoVisita__c</fullName>
        <description>Actividades u objetivos de la visita.</description>
        <label>Actividades/Objetivos de la Visita</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Actividad autos nuevos</fullName>
                </value>
                <value>
                    <fullName>Actividad autos seminuevos</fullName>
                </value>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>AP – PM</fullName>
                </value>
                <value>
                    <fullName>Aprobadas no Formalizadas</fullName>
                </value>
                <value>
                    <fullName>Arrendamiento Puro</fullName>
                </value>
                <value>
                    <fullName>Capacitación</fullName>
                </value>
                <value>
                    <fullName>Capilaridad</fullName>
                </value>
                <value>
                    <fullName>Coaching Gerente Regional</fullName>
                    <isActive>false</isActive>
                    <label>Coaching Gerente Regional</label>
                </value>
                <value>
                    <fullName>Comisiones</fullName>
                </value>
                <value>
                    <fullName>Comité Comercial</fullName>
                </value>
                <value>
                    <fullName>Comité Operativo</fullName>
                    <isActive>false</isActive>
                    <label>Comité Operativo</label>
                </value>
                <value>
                    <fullName>Compra Inteligente</fullName>
                </value>
                <value>
                    <fullName>Control de Expedientes</fullName>
                </value>
                <value>
                    <fullName>Impulso Alianzas</fullName>
                    <isActive>false</isActive>
                    <label>Impulso Alianzas</label>
                </value>
                <value>
                    <fullName>Impulso MM</fullName>
                    <isActive>false</isActive>
                    <label>Impulso MM</label>
                </value>
                <value>
                    <fullName>Impulso Prod Esp</fullName>
                    <isActive>false</isActive>
                    <label>Impulso Prod Esp</label>
                </value>
                <value>
                    <fullName>Nuevos</fullName>
                </value>
                <value>
                    <fullName>Oferta comercial del mes</fullName>
                </value>
                <value>
                    <fullName>Operaciones pendientes</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>PDM</fullName>
                </value>
                <value>
                    <fullName>Personas Morales</fullName>
                </value>
                <value>
                    <fullName>Plan de incentivación</fullName>
                </value>
                <value>
                    <fullName>Plan F&amp;I +</fullName>
                </value>
                <value>
                    <fullName>Plan Piso</fullName>
                </value>
                <value>
                    <fullName>Productividad Inplants</fullName>
                </value>
                <value>
                    <fullName>Referencias Banca Comercial</fullName>
                </value>
                <value>
                    <fullName>Rentabilidad distribuidor</fullName>
                </value>
                <value>
                    <fullName>Revisión de Comisiones</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ls_TipoVisitaRealizar__c</fullName>
        <description>Tipo de visita a realizar, operativo o ejecutivo.</description>
        <label>Tipo de Visita a Realizar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operativo</fullName>
                </value>
                <value>
                    <fullName>Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Operativo Ejecutivo</fullName>
                    <isActive>false</isActive>
                    <label>Operativo Ejecutivo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_ls_Tipo_de_Reunion__c</fullName>
        <description>Lista de Audio y Video Conferencia o Presencia</description>
        <label>Tipo de reunión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audio Conferencia</fullName>
                </value>
                <value>
                    <fullName>Presencial</fullName>
                </value>
                <value>
                    <fullName>Vídeo Conferencia</fullName>
                </value>
                <value>
                    <fullName>Centro de Negocios</fullName>
                </value>
                <value>
                    <fullName>Traslados</fullName>
                </value>
                <value>
                    <fullName>Reunión en sede</fullName>
                </value>
                <value>
                    <fullName>Visita Ocular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF001_rb_NombreComercialCliente__c</fullName>
        <description>Nombre comercial del cliente, cuenta relacionada al reporte de visita.</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre Comercial del Cliente</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Grupo</value>
            </filterItems>
            <filterItems>
                <field>Account.OwnerId</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reportes de Visitas (Nombre Comercial del Cliente)</relationshipLabel>
        <relationshipName>ReporteVisita</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EG_at_EspecifiqueObjetivos__c</fullName>
        <description>Objetivos del reporte de visita.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Especifique Objetivos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EG_ft_HoraVisitaLlamada__c</fullName>
        <description>Fecha/ hora en que se realizó la visita o llamada.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha/Hora de Visita/Llamada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MX_BPP_PropietarioVisitaYCliente__c</fullName>
        <description>Devuelve verdadero si el propietario del cliente y del reporte de visita es el mismo usuario.</description>
        <formula>IF(OwnerId  =  CF001_rb_NombreComercialCliente__r.OwnerId , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>¿El propietario del reporte de visita es el mismo propietario del cliente?</inlineHelpText>
        <label>Propietario del cliente y la visita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EG_fm_NumeroCliente__c</fullName>
        <description>Fórmula que obtiene el número de cliente de la cuenta relacionada al reporte de visita.</description>
        <formula>CF001_rb_NombreComercialCliente__r.No_de_cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG_fm_TipoVisita__c</fullName>
        <description>Muestra el tipo de visita dependiendo el tipo de registro.</description>
        <formula>IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteLlamadaComercial&apos;), &apos;Llamada Comercial&apos;, 
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteLlamadaSeguimiento&apos;), &apos;Llamada de Seguimiento&apos;, 
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteVisitaComercial&apos;), &apos;Visita Comercial&apos;, 
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteVisitaSeguimiento&apos;), &apos;Visita de Seguimiento&apos;, 
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteVisitaEstrategica&apos;), &apos;Visita Estratégica&apos;,
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteVisitaaOficina&apos;), &apos;Visita a Oficina&apos;,
IF(BEGINS(RecordType.DeveloperName , &apos;EG_tr_ReporteVisitaEspecialista&apos;), &apos;Visita Especialista&apos;, &apos;Sin Datos&apos;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Visita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG_ft_ProximaVisitaLlamada__c</fullName>
        <description>Fecha/ hora de la próxima visita o llamada.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Próxima Visita / Llamada</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EG_ls_ObjetivoVisita__c</fullName>
        <description>Objetivo de la visita o llamada.</description>
        <label>Objetivo de la Visita/Llamada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actualización de información</fullName>
                </value>
                <value>
                    <fullName>Actualizar Información</fullName>
                </value>
                <value>
                    <fullName>Ampliar el conocimiento sobre sus necesidades</fullName>
                </value>
                <value>
                    <fullName>Asesoría en productos o servicios BBVA Bancomer</fullName>
                </value>
                <value>
                    <fullName>Asesoría y Seguimiento de Productos y Servicios</fullName>
                </value>
                <value>
                    <fullName>Atención a proyectos y planes</fullName>
                </value>
                <value>
                    <fullName>Atención personalizada</fullName>
                </value>
                <value>
                    <fullName>Avance de Oportunidades</fullName>
                </value>
                <value>
                    <fullName>Capacitación a Ejecutivo Nuevo</fullName>
                </value>
                <value>
                    <fullName>Capacitación a Ejecutivos</fullName>
                </value>
                <value>
                    <fullName>Capacitación de Producto</fullName>
                </value>
                <value>
                    <fullName>Capacitación en Cash Managment</fullName>
                </value>
                <value>
                    <fullName>Capacitación Net Cash o Bancomer.com</fullName>
                </value>
                <value>
                    <fullName>Cercanía con el cliente (Visitas de Cortesía)</fullName>
                </value>
                <value>
                    <fullName>Cerrar de Trámite de Crédito</fullName>
                </value>
                <value>
                    <fullName>Contratación de Canales</fullName>
                </value>
                <value>
                    <fullName>Contratación de producto o servicio</fullName>
                </value>
                <value>
                    <fullName>Detección de Necesidades del Cliente</fullName>
                </value>
                <value>
                    <fullName>Detectar nuevas oportunidades</fullName>
                </value>
                <value>
                    <fullName>Elevar el nivel de interlocucion</fullName>
                </value>
                <value>
                    <fullName>Entrega de formatos maestros SEP</fullName>
                </value>
                <value>
                    <fullName>Estructuración de operaciones de crédito</fullName>
                </value>
                <value>
                    <fullName>Garantizar el uso de los Productos/Servicios contratados</fullName>
                </value>
                <value>
                    <fullName>Generar una relación de confianza; Refuerzos de vínculos con el cliente</fullName>
                </value>
                <value>
                    <fullName>Generar una relación de confianza (Bancomer como socio)</fullName>
                </value>
                <value>
                    <fullName>Identificar áreas de mejor para incrementar la satisfacción del cliente</fullName>
                </value>
                <value>
                    <fullName>Identificar oportunidades de negocios futuras</fullName>
                </value>
                <value>
                    <fullName>Implementación de productos o servicios</fullName>
                </value>
                <value>
                    <fullName>Impulso Bancarización SEP en el Estado</fullName>
                </value>
                <value>
                    <fullName>Integración de Expediente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EG_ls_TipoVisitaLlamadaRealizar__c</fullName>
        <description>Tipo de visita o llamada a realizar, por ejemplo llamada de seguimiento.</description>
        <label>Tipo de Visita / Llamada a Realizar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada Comercial</fullName>
                </value>
                <value>
                    <fullName>Llamada Seguimiento</fullName>
                </value>
                <value>
                    <fullName>Visita Comercial</fullName>
                </value>
                <value>
                    <fullName>Visita Estratégica</fullName>
                </value>
                <value>
                    <fullName>Visita Seguimiento</fullName>
                </value>
                <value>
                    <fullName>Visita Especialista</fullName>
                </value>
                <value>
                    <fullName>Visita a Oficina</fullName>
                </value>
                <value>
                    <fullName>Visita Cambio de Oficina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EG_Oficina__c</fullName>
        <description>Nombre de la oficina a la que el director de oficina pertenece</description>
        <formula>TEXT( EG_rb_DirectorOficina__r.Oficina__c )</formula>
        <label>Oficina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG_rb_DirectorOficina__c</fullName>
        <description>Director de oficina.</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director de Oficina</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DirectorOficinaRV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EG_rb_NombreGrupo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre del Grupo</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reportes de Visitas (Nombre del Grupo)</relationshipLabel>
        <relationshipName>NombreGrupo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EG_rb_PersonaVisitadaContactada__c</fullName>
        <description>Persona visitada o contactada, contacto relacionado a la cuenta relacionada con el reporte de visita.</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona Visitada/Contactada</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.EG_rb_NombreGrupo__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.CF001_rb_NombreComercialCliente__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>VisitadaContactada</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HI001_fm_Puntualidad__c</fullName>
        <description>Fecha/ hora en que se efectuó el check in</description>
        <formula>IF(HI001_ft_Fecha_Hora_CheckIn__c&lt;= (CF001_ft_Fecha_Visita_Programada__c + (15/1440)), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),
IF(HI001_ft_Fecha_Hora_CheckIn__c&gt; (CF001_ft_Fecha_Visita_Programada__c + (15/1440)) &amp;&amp; HI001_ft_Fecha_Hora_CheckIn__c &lt; (CF001_ft_Fecha_Visita_Programada__c + (60/1440)), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),  
IF(HI001_ft_Fecha_Hora_CheckIn__c&gt; (CF001_ft_Fecha_Visita_Programada__c + (60/1440)), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
IF(AND(ISBLANK(HI001_ft_Fecha_Hora_CheckIn__c),  CF001_ft_Fecha_Visita_Programada__c &lt; NOW() ), &apos;Inasistencia&apos;, &apos;Programada&apos;)  ) ) )</formula>
        <label>Puntualidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HI001_ft_Fecha_Hora_CheckIn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha / Hora CheckIn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HI001_ls_CondonReg__c</fullName>
        <description>Indica si el cliente cuenta o no con Régimen de Condominio.</description>
        <label>¿Cuenta con Régimen de Condominio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI001_ls_HouseType__c</fullName>
        <description>Lista de selección para indicar el tipo de vivienda del cliente, por ejemplo departamento.</description>
        <label>Tipo de viviendas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Casa</fullName>
                </value>
                <value>
                    <fullName>Departamento</fullName>
                </value>
                <value>
                    <fullName>Terreno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI001_ls_ReportType__c</fullName>
        <description>Tipo de Reporte de Visita a realizar</description>
        <inlineHelpText>Tipo de Reporte de Visita a realizar.</inlineHelpText>
        <label>Tipo de reporte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capacitación</fullName>
                </value>
                <value>
                    <fullName>Guardia y prospección</fullName>
                </value>
                <value>
                    <fullName>Nuevas Negociaciones</fullName>
                </value>
                <value>
                    <fullName>Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Operativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI001_ls_ReviewProducts__c</fullName>
        <label>Productos revisados</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cofinavit</fullName>
                </value>
                <value>
                    <fullName>Adquisición vivienda</fullName>
                </value>
                <value>
                    <fullName>Adquisición terreno</fullName>
                </value>
                <value>
                    <fullName>Arrendamiento Puro</fullName>
                </value>
                <value>
                    <fullName>Personas Morales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI001_ls_Tracing__c</fullName>
        <label>Seguimiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mostró interés</fullName>
                </value>
                <value>
                    <fullName>Se capacitará a sus vendedores</fullName>
                </value>
                <value>
                    <fullName>Le llamaremos en cierta fecha</fullName>
                </value>
                <value>
                    <fullName>Solicita que regresemos en cierto tiempo</fullName>
                </value>
                <value>
                    <fullName>Nos entregará &quot;x&quot; número de candidatos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI001_ls_UnitType__c</fullName>
        <label>Tipo de unidades</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Casas</fullName>
                </value>
                <value>
                    <fullName>Departamentos</fullName>
                </value>
                <value>
                    <fullName>Terrenos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI_ls_statusVR__c</fullName>
        <description>Muestra el estatus del reporte</description>
        <label>Estatus del Reporte</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>En proceso</fullName>
                    <default>true</default>
                    <label>En proceso</label>
                </value>
                <value>
                    <fullName>Finalizado</fullName>
                </value>
                <value>
                    <fullName>Sin Ckeck-in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_dv_TipoMoneda__c</fullName>
        <description>campo que captura el tipo de moneda</description>
        <label>Tipo de moneda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_lm_EstrategiaCortoPlazo__c</fullName>
        <description>Estrategia de Negocio PYME Corto Plazo</description>
        <inlineHelpText>(Corto Plazo) Hasta 1 año</inlineHelpText>
        <label>Plan de la Empresa a Corto Plazo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PYME_ls_Estrategia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_lm_EstrategiaLargoPlazo__c</fullName>
        <description>Estrategia de Negocio PyME</description>
        <inlineHelpText>(Largo Plazo) Más de un año</inlineHelpText>
        <label>Plan de la Empresa a Largo Plazo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PYME_ls_Estrategia</valueSetName>
        </valueSet>
    </fields>
</CustomObject>